--- a/3-FUNDAMENTOS/capitulo_fundamentos.tex
+++ b/3-FUNDAMENTOS/capitulo_fundamentos.tex
@@ -37,8 +37,8 @@ O processo ETL faz parte da arquitetura de um DW. Neste domínio existem diverso
 \begin{figure*}[htpb]
 	\centering
 		\includegraphics[width=\textwidth]{img/dw_arc}
-    \caption{Arquitetura de um \textit{Data Warehouse}}
-    % \floatfoot{Fonte: Kimball e Ross \cite{kimball2002dw}}
+    \caption[Arquitetura de um \textit{Data Warehouse}]
+        {Arquitetura de um \textit{Data Warehouse} \\ Fonte: adaptado de Kimball e Ross \cite{kimball2002dw}}
 	\label{fig:dw_arq}
 \end{figure*}
 
@@ -62,8 +62,7 @@ Mesmo que a modelagem Dimensional não atinja a normalização 3NF, modelos \tex
 \begin{figure*}[htpb]
 	\centering
 		\includegraphics[width=13cm]{img/snow}
-    \caption{Exemplo de esquema \textit{snowflake}}
-    % \floatfoot{Adaptado da Figura \ref{fig:star_dim}}
+    \caption[Exemplo de esquema \textit{snowflake}]{Exemplo de esquema \textit{snowflake} \\ Adaptado da Figura \ref{fig:star_dim}}
 	\label{fig:snow}
 \end{figure*}
 
@@ -287,7 +286,7 @@ colunas, Figura \ref{fig:column}, a partir dos registros da Figura \ref{fig:regs
 \begin{figure*}[htpb]
 	\centering
 		\includegraphics[width=12cm]{registros}
-	\caption{Exemplos de registros para a entidade \textit{funcionário} apresentada no Capítulo \ref{sgbd}}
+	\caption{Exemplos de registros para a entidade \textit{funcionário} apresentada na seção anterior}
 	\label{fig:regs}
 \end{figure*}
 
